--- a/telas/add.html
+++ b/telas/add.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
-<body>
+<body onload="funcTeste()">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
             <nav class="navbar navbar-brand navbar-light bg-light">
@@ -61,16 +61,19 @@
           <p class="informacao__form">Informações pessoais</p>
           <div class="form-group mt-4">
             <label for="inputNomePessoa">Seu nome:</label>
-            <input type="text" class="form-control" id="inputNomePessoa" placeholder="Seu nome aqui" required>
+            <input data-input="nome" type="text" class="form-control" id="inputNomePessoa" placeholder="Seu nome aqui" required>
+            <p data-mensagemErro="nome" class="error"></p>
           </div>
           <div class="form-group mt-3">
             <label for="inputEmail">E-mail para contato</label>
-            <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="email@dominio.com" required>
+            <input data-input="email" type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="email@dominio.com" pattern="/^[a-z0-9.]+@[a-z0-9]+\.[a-z]+\.([a-z]+)?$/i" required>
+            <p data-mensagemErro="email" class="error"></p>
             <small id="emailHelp" class="form-text text-muted">Nunca compartilharemos seu e-mail com ninguém.</small>
           </div>
           <div class="form-group mt-3">
             <label for="inputTelefone">Telefone para contato</label>
-            <input type="number" class="form-control" id="inputTelefone" placeholder="(XX) XXXXX-XXXX" required>
+            <input data-input="telefone" type="number" class="form-control" id="inputTelefone" placeholder="(XX) XXXXX-XXXX" required>
+            <p data-mensagemErro="telefone" class="error"></p>
           </div>
 
           <hr>
@@ -78,23 +81,24 @@
           <p class="informacao__form mt-5">Localização</p>
           <div class="form-group mt-3">
             <label for="inputCEP">CEP</label>
-            <input type="email" class="form-control" id="inputCEP" placeholder="XXXXX-XXX" required>
+            <input data-input="CEP" type="email" class="form-control" id="inputCEP" placeholder="XXXXX-XXX" required>
+            <p data-mensagemErro="CEP" class="error"></p>
           </div>
           <div class="form-group mt-3">
             <label for="inputEstado">Estado</label>
-            <input type="email" class="form-control" id="inputEstado" required>
+            <input readonly type="email" class="form-control" id="inputEstado" required>
           </div>
           <div class="form-group mt-3">
             <label for="inputCidade">Cidade</label>
-            <input type="email" class="form-control" id="inputCidade" required>
+            <input readonly type="email" class="form-control" id="inputCidade" required>
           </div>
           <div class="form-group mt-3">
             <label for="inputRua">Rua</label>
-            <input type="email" class="form-control" id="inputRua" required>
+            <input readonly type="email" class="form-control" id="inputRua" required>
           </div>
           <div class="form-group mt-3">
             <label for="inputBairro">Bairro</label>
-            <input type="email" class="form-control" id="inputBairro" required>
+            <input readonly type="email" class="form-control" id="inputBairro" required>
           </div>
 
           <hr>
@@ -102,7 +106,8 @@
           <p class="informacao__form mt-5">Informações do seu gato</p>
           <div class="form-group mt-4">
             <label for="inputNomeGato">Nome do seu gato:</label>
-            <input type="text" class="form-control" id="inputNomeGato" placeholder="Nome do seu gato" required>
+            <input data-input="nomeGato" type="text" class="form-control" id="inputNomeGato" placeholder="Nome do seu gato" required>
+            <p data-mensagemErro="nomeGato" class="error"></p>
           </div>
           <div class="mt-3">
             <label>Gênero do seu gato: </label>
@@ -129,7 +134,8 @@
           </div>
           <div class="form-group mt-3">
             <label for="inputRaca">Raça</label>
-            <input type="text" class="form-control" id="inputRaca" placeholder="Siamês, persa, vira-lata..." required>
+            <input data-input="raca" type="text" class="form-control" id="inputRaca" placeholder="Siamês, persa, vira-lata..." required>
+            <p data-mensagemErro="raca" class="error"></p>
           </div>
 
 
@@ -147,6 +153,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="../assets/js/validacaoFormulario.js"></script>
     <script src="../assets/js/APIcontroller.js"></script>
 
 </body>
