--- a/telas/add.html
+++ b/telas/add.html
@@ -81,7 +81,7 @@
           <p class="informacao__form mt-5">Localização</p>
           <div class="form-group mt-3">
             <label for="inputCEP">CEP</label>
-            <input data-input="CEP" type="number" class="form-control" id="inputCEP" placeholder="XXXXX-XXX" pattern="[0-9]{5}-?[0-9]{3}" required>
+            <input data-input="CEP" type="text" class="form-control" id="inputCEP" placeholder="XXXXX-XXX" pattern="[\d]{5}-?[\d]{3}" required>
             <p data-mensagemErro="CEP" class="error"></p>
           </div>
           <div class="form-group mt-3">
