--- a/telas/add.html
+++ b/telas/add.html
@@ -86,19 +86,19 @@
           </div>
           <div class="form-group mt-3">
             <label for="inputEstado">Estado</label>
-            <input readonly type="text" class="form-control" id="inputEstado" required>
+            <input data-input="estado" readonly type="text" class="form-control" id="inputEstado" required>
           </div>
           <div class="form-group mt-3">
             <label for="inputCidade">Cidade</label>
-            <input readonly type="text" class="form-control" id="inputCidade" required>
+            <input data-input="cidade" readonly type="text" class="form-control" id="inputCidade" required>
           </div>
           <div class="form-group mt-3">
             <label for="inputRua">Rua</label>
-            <input readonly type="text" class="form-control" id="inputRua" required>
+            <input data-input="rua" readonly type="text" class="form-control" id="inputRua" required>
           </div>
           <div class="form-group mt-3">
             <label for="inputBairro">Bairro</label>
-            <input readonly type="text" class="form-control" id="inputBairro" required>
+            <input data-input="bairro" readonly type="text" class="form-control" id="inputBairro" required>
           </div>
 
           <hr>
