--- a/telas/paginaErro.html
+++ b/telas/paginaErro.html
@@ -53,7 +53,7 @@
 
     <main class="text-center d-flex flex-column justify-content-center align-items-center mt-5 pt-5 mb-5 pb-5">
         <h1 class="text-light">Ocorreu um erro</h1>
-        <img src="../assets/img/errorImage.png" alt="Gato feliz" style="width: 600px; height: 500px;">
+        <img src="../assets/img/errorImage.png" alt="Gato triste" style="width: 600px; height: 500px;">
     </main>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
